[gd_scene load_steps=33 format=3 uid="uid://bwwhseqw4inqa"]

[ext_resource type="Script" path="res://scripts/easy_adventures.gd" id="1_3rarx"]
[ext_resource type="Texture2D" uid="uid://bcbsioagaaqm2" path="res://assets/images/leftArrow.png" id="1_4jfv8"]
[ext_resource type="Theme" uid="uid://dyl6eamsb5g57" path="res://themes/Carousel.tres" id="2_rxgpj"]
[ext_resource type="Texture2D" uid="uid://k06bel4lny47" path="res://assets/images/leftArrowHover.png" id="3_pmwx2"]
[ext_resource type="Texture2D" uid="uid://bfjfn8wi0oyei" path="res://assets/images/goblinKing.png" id="3_sht8w"]
[ext_resource type="Texture2D" uid="uid://dbk4edxx2t1wi" path="res://assets/images/leftArrowPressed.png" id="4_y7bba"]
[ext_resource type="Texture2D" uid="uid://4h8tt67l7a44" path="res://assets/images/storySelect/Kobolds2.png" id="7_0urij"]
[ext_resource type="Texture2D" uid="uid://b25ro3ewwpp3y" path="res://assets/images/storySelect/direRat2.png" id="8_gsmgh"]
[ext_resource type="Texture2D" uid="uid://dm5g7ox3qo0j8" path="res://assets/images/storySelect/Necromancer2.png" id="9_yngej"]
[ext_resource type="Texture2D" uid="uid://1qu7cg3h7x5r" path="res://assets/images/storySelect/ringOfCalamity2.png" id="10_bvhgo"]
[ext_resource type="Texture2D" uid="uid://chwoqrsd00sct" path="res://assets/images/rightArrowPressed.png" id="10_h52sm"]
[ext_resource type="Texture2D" uid="uid://s4rrr531crcy" path="res://assets/images/storySelect/bandit2.png" id="11_3y4i4"]
[ext_resource type="Texture2D" uid="uid://b7kxmxbsyxflm" path="res://assets/images/rightArrowHovered.png" id="11_qw7ef"]
[ext_resource type="Texture2D" uid="uid://c721y131qcki0" path="res://assets/images/storySelect/dragon2.png" id="12_v6fdw"]
[ext_resource type="Texture2D" uid="uid://cb0jvom1iwjqc" path="res://assets/images/rightArrow.png" id="12_yxhfu"]
[ext_resource type="Theme" uid="uid://rea1uratecws" path="res://themes/Defaulttres.tres" id="13_load3"]
[ext_resource type="Texture2D" uid="uid://cjpgq3m5w0x0j" path="res://assets/images/storySelect/pheniox2.png" id="13_rjdxc"]
[ext_resource type="Texture2D" uid="uid://va1o4twyewk3" path="res://assets/images/storySelect/hag2.png" id="14_na1vk"]
[ext_resource type="Texture2D" uid="uid://dnctaa64iwjmq" path="res://assets/images/blankAdventureIcon.png" id="15_62bgn"]
[ext_resource type="AudioStream" uid="uid://biahidwgnemv1" path="res://assets/sfx/Selection.wav" id="20_f4onj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wprqb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v2tw3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bkd68"]
texture = ExtResource("4_y7bba")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bb8hr"]
texture = ExtResource("3_pmwx2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_npel6"]
texture = ExtResource("4_y7bba")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2vuxg"]
texture = ExtResource("4_y7bba")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m4usa"]
texture = ExtResource("1_4jfv8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ovp2l"]
texture = ExtResource("10_h52sm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7dswi"]
texture = ExtResource("10_h52sm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vpq2d"]
texture = ExtResource("11_qw7ef")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3bg47"]
texture = ExtResource("10_h52sm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0d4cb"]
texture = ExtResource("12_yxhfu")

[node name="EasyAdventures" type="Control"]
custom_minimum_size = Vector2(500, 280)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3rarx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_wprqb")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="PreviousButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureRect"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rxgpj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/disabled = SubResource("StyleBoxTexture_bkd68")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/hover = SubResource("StyleBoxTexture_bb8hr")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_npel6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2vuxg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/normal = SubResource("StyleBoxTexture_m4usa")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="ObjectContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 25

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
layout_mode = 2
theme_override_constants/margin_left = 70

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_sht8w")

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_0urij")

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("8_gsmgh")

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_yngej")

[node name="TextureRect5" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("10_bvhgo")

[node name="TextureRect6" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("11_3y4i4")

[node name="TextureRect7" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("12_v6fdw")

[node name="TextureRect8" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("13_rjdxc")

[node name="TextureRect9" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("14_na1vk")

[node name="TextureRect10" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("15_62bgn")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ObjectContainer"]
layout_mode = 2
theme_override_constants/margin_right = 70

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
flip_h = true

[node name="NextButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureRect2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rxgpj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ovp2l")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_7dswi")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/hover = SubResource("StyleBoxTexture_vpq2d")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3bg47")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_v2tw3")
theme_override_styles/normal = SubResource("StyleBoxTexture_0d4cb")

[node name="SelectionMarker" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2

[node name="AdventureSelectionButton" type="Button" parent="."]
layout_mode = 2
offset_left = 604.0
offset_top = 126.0
offset_right = 819.0
offset_bottom = 155.0
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("13_load3")
text = "Listen to Adventure"

[node name="RichTextLabel" type="RichTextLabel" parent="AdventureSelectionButton"]
visible = false
layout_mode = 0
offset_left = -36.0
offset_top = 42.0
offset_right = 254.0
offset_bottom = 79.0
text = "Choose a character first!"

[node name="Timer" type="Timer" parent="AdventureSelectionButton/RichTextLabel"]

[node name="Difficulty" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 2.0
offset_right = 435.0
offset_bottom = 42.0
theme_override_constants/outline_size = 6
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 240.0
offset_right = 435.0
offset_bottom = 280.0
theme_override_colors/default_color = Color(0.984375, 0.976685, 0.976685, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true

[node name="EnableScroll" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_f4onj")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureRect/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureRect2/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="AdventureSelectionButton" to="." method="_on_adventure_selection_button_pressed"]
[connection signal="timeout" from="AdventureSelectionButton/RichTextLabel/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="EnableScroll" to="." method="_on_enable_scroll_timeout"]
